<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Principal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/BGrupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="grupos"
            android:text="@string/Grupos" />

        <Button
            android:id="@+id/TArticulos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="articulos"
            android:text="@string/Articulos" />

        <Button
            android:id="@+id/BClientes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="clientes"
            android:text="@string/Clientes" />

        <Button
            android:id="@+id/BVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ventas"
            android:text="@string/Venta" />

        <Button
            android:id="@+id/BStok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="movimientos"
            android:text="@string/Movimientos" />

        <Button
            android:id="@+id/BSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="salir"
            android:text="@string/Salir" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>